--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<p>
+Welcome to my github homepage! Some recent posts are below:
+
+This site was built using the wonderful <a href="https://github.com/LeNPaul/Lagrange">Lagrange theme by Paul Le</a> 
+</p>
+
 {% for post in paginator.posts %}
   <div class="posts-container">
     <h1>
