--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@ layout: default
 
 <p>
 Welcome to my github homepage! Some recent posts are below:
-
-This site was built using the wonderful <a href="https://github.com/LeNPaul/Lagrange">Lagrange theme by Paul Le</a> 
+  
 </p>
 
 {% for post in paginator.posts %}
@@ -37,3 +36,5 @@ This site was built using the wonderful <a href="https://github.com/LeNPaul/Lagr
     <span class="pagination-button">{{ site.data.settings.pagination.next_page }}</span>
   {% endif %}
 </div>
+
+<p>This site was built using the wonderful <a href="https://github.com/LeNPaul/Lagrange">Lagrange theme by Paul Le</a></p>
