--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+{% if page.image %}
+  <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
+{% endif %}
 <p>
 Welcome to my github homepage! Some recent posts are below:
   
